# opengl_proj

./: .gitignore  CMakeLists.txt  README.md
include/: GLFWInit.h  InputHandler.h  Renderer.h
include/glad/: glad.h
src/: GLFWInit.cpp  InputHandler.cpp  Renderer.cpp  glad.c  main.cpp
